--- a/scripts/multiple_model.ipynb
+++ b/scripts/multiple_model.ipynb
@@ -1,6 +1,13 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Multipleclass SVM Model prediction for SMASS survery, F1 score: ~ 0.98"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
